--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "inversify": "^7.5.1",
+    "reflect-metadata": "^0.2.2"
   }
 }
